# wikilint

./: .gitignore  Build.PL  MANIFEST  MANIFEST.SKIP  META.yml  Makefile  Makefile.am  README  TODO  configure.ac  make-cache  make-disambs  make-redirs
cgi-bin/: .gitignore  BKL_neu.txt  Makefile.am  WP-autoreview.pl  autoreview.pm  config.pm  convert_BKL.pl  download_bkl.sh  fill_words_de.txt  test.html  wikilint  wikilint.in
htdocs/: Makefile.am
lib/: Makefile.am  Wikilint.pm
lib/Wikilint/: .gitignore  Config.pm  Config.pm.in  DB.pm  Makefile.am
lib/Wikilint/DB/: .gitignore  Language.pm  Language.pm.in  Makefile.am
lib/langdata/de/: abbreviations.txt  avoid_words.txt  disambs.txt  typos.txt
lib/langdata/en/: avoid_words.txt
share/langdata/de/: .gitignore  Makefile.am  disambs.txt  fill_words.txt
share/langdata/en/: Makefile.am  avoid_words.txt
spider/: WP-autoreview-spider.queue.pl  do_lemma_list.pl  do_review.sh
t/: check_unformatted_refs.t  escapesectiontitle.t  html-output.t  remove_stuff_to_ignore.t  remove_year_and_date_links.t  tag_dates_rest_line.t
t/testcases/: Krefeld.wiki
t/testcases/de/: Chania.html  Gerald_Bast.html  Hamburg-Horn.html  Krefeld.html  Rama_III..html  Rama_VI..html  Rama_VI..wiki
tests/: .gitignore  Makefile.am  escapesectiontitle.test  html-output.test
tests/testcases/de/: Chania.html  Chania.wiki  Gerald_Bast.html  Gerald_Bast.wiki  Hamburg-Horn.html  Hamburg-Horn.wiki  Krefeld.html  Rama_III..html  Rama_III..wiki  Rama_VI..html
wikilint/: wp.css
